skfk8/kops/ingress.1.22.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "skf-ingress-controller"
  namespace: "default"
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - skfdemo.fwdsec.xyz
    secretName: skfdemo.fwdsec.xyz
  rules:
  - host: skfdemo.fwdsec.xyz
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: skf-flask-front
           port: 
             number: 8788
     - path: /api
       pathType: Prefix
       backend:
         service:
           name: skf-flask-back
           port: 
             number: 8888
     - path: /swaggerui
       pathType: Prefix
       backend:
         service:
           name: skf-flask-back
           port: 
             number: 8888
